--- a/projects/bedroomliveout/index.html
+++ b/projects/bedroomliveout/index.html
@@ -180,8 +180,8 @@
         <header>BedroomLiveOut (2020)</header>
         <div class="image-grid">
             
-            <a href="/VI-cover.jpeg">
-                <img src="/VI-cover.jpeg" height="256px" alt="/VI-cover.jpeg" />
+            <a href="/BedroomLiveOut-cover.jpeg">
+                <img src="/BedroomLiveOut-cover.jpeg" height="256px" alt="/BedroomLiveOut-cover.jpeg" />
             </a>
             <hr />
             
