--- a/projects/index.html
+++ b/projects/index.html
@@ -271,7 +271,7 @@
             <header>BedroomLiveOut (2020)</header>
             <div class="image-grid">
                 
-                <img src="/VI-cover.jpeg" height="256px" alt="/VI-cover.jpeg" />
+                <img src="/BedroomLiveOut-cover.jpeg" height="256px" alt="/BedroomLiveOut-cover.jpeg" />
                 
 
             </div>
