--- a/about/index.html
+++ b/about/index.html
@@ -179,17 +179,28 @@
   <div class="about-page">
 
     <div class="about-container">
+      <p><img src="/RGBdog_studio_picture_2023.png" alt="image"></p>
+
+
+
+<div class="gdoc-columns gdoc-columns--regular flex flex-gap flex-mobile-column">
+    <div class="gdoc-columns__content gdoc-markdown--nested flex-even">
+      <p>Hi! We are RGBdog, a community-driven creative studio researching ethical, humane, and bonding technology, that aims to facilitate care in a digital society.</p>
+<p>We believe that the power of human empathy could shape the future of technology. We strive to keep our critical minds up-to-date on how digital culture shapes human behaviour and society.</p>
+<p>We fluidly gather creatives sharing a similar agenda. If you want to get in touch with us, feel free to shoot us an email! We are physically based in The Hague, The Netherlands, but globally in the digital universe.</p>
+<p><a href="mailto:woof@rgbdog.studio">woof@rgbdog.studio</a></p>
+<p><a href="https://instagram.com/rgbdog.studio">instagram</a></p>
+</div>
+    <div class="gdoc-columns__content gdoc-markdown--nested flex-even">
       <h2 id="core-team">Core Team</h2>
-<p>Soyun Park</p>
-<p>Leo Scarin</p>
-<h2 id="fluid-collaborators">Fluid Collaborators</h2>
-<p>Szymon</p>
-<p>Cailean</p>
-<p>Peter</p>
-<p>Krea</p>
-<p>Handi Kim</p>
-<p>Tanja Busking</p>
-<p>Jin</p>
+<p>🐶 <a href="https://soyunparrrk.com">Soyun Park</a></p>
+<p>Soyun Park is an artist, designer, educator, and director at RGBdog. She’s from South Korea and is based in The Netherlands since 2017. She loves dogs and doing Wing Chun kung-fu. She’s a big fan of the book ‘Ways of Being’ by James Bridle.</p>
+<p>🦴 <a href="https://www.leoscarin.com/">Leo Scarin</a></p>
+<p>Leo Scarin is a Creative Technologist based in The Hague, NL, where he graduated at the Royal Academy of Arts. Researching the meeting points of computational and human technologies, Leo explores social, political, and increasingly environmental impacts of digital culture, by means of interactive and immersive installations.</p>
+<h2 id="fluid-collaborators">Fluid collaborators</h2>
+<p>Szy, <a href="https://www.caileanfinn.ie/">Cailean Finn</a>, <a href="https://www.instagram.com/peter.pflugler">Peter Pflügler</a>, <a href="https://handikim.com/">Handi Kim</a>, Stichting Krea, <a href="https://www.tanjabusking.nl/">Tanja Busking</a>, Jin Chang, <a href="https://nikischeijen.nl/">Niki Scheijen</a>, <a href="https://soundcloud.com/berk-aka-princesscamel">Princess Camel</a></p>
+</div>
+</div>
 
     </div>
   </div>
