--- a/projects/data-degrowth/index.html
+++ b/projects/data-degrowth/index.html
@@ -195,11 +195,8 @@
                 
             </center>
             <hr />
-            <h2 id="ingredients">Ingredients</h2>
-<ul>
-<li>eggs, as many as you&rsquo;d like</li>
-<li>water</li>
-</ul>
+            <h2 id="ingredients">Info coming soon!</h2>
+
 
         </div>
     </div>
