--- a/projects/homegrown-interdependence/index.html
+++ b/projects/homegrown-interdependence/index.html
@@ -193,24 +193,14 @@
                 
             </center>
             <hr />
-            <h2 id="ingredients">Ingredients</h2>
+            <h2 id="ingredients">Info coming soon!</h2>
 <div style="position: relative; padding-bottom: 56.25%; padding-top: 0; height: 0;">
   <iframe src="https://www.youtube.com/embed/CsxIi_YM0o8" frameborder="0" allowfullscreen="true"
   style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;">
   </iframe>
 </div>
 <br><br>
-<ul>
-<li>eggs, as many as you&rsquo;d like</li>
-<li>water</li>
-</ul>
-<h2 id="method">Method</h2>
-<ol>
-<li>Put water in pot</li>
-<li>Boil water</li>
-<li>Put eggs inside the water</li>
-<li>Wait 5-8 minutes</li>
-</ol>
+
 
         </div>
     </div>
