--- a/about/index.html
+++ b/about/index.html
@@ -188,7 +188,7 @@
       <p>Hi! We are RGBdog, a community-driven creative studio researching ethical, humane, and bonding technology, that aims to facilitate care in a digital society.</p>
 <p>We believe that the power of human empathy could shape the future of technology. We strive to keep our critical minds up-to-date on how digital culture shapes human behaviour and society.</p>
 <p>We fluidly gather creatives sharing a similar agenda. If you want to get in touch with us, feel free to shoot us an email! We are physically based in The Hague, The Netherlands, but globally in the digital universe.</p>
-<p>email: <a href="mailto:rgbdog-studio@proton.me">RGBdog-studio(at)proton.me</a></p>
+<p>email: <a href="mailto:woof@rgbdog.studio">woof(at)rgbdog.studio</a></p>
 <p><a href="https://instagram.com/rgbdog.studio">instagram</a></p>
 </div>
     <div class="gdoc-columns__content gdoc-markdown--nested flex-even">
